--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -4,10 +4,10 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,22
-Size=1582,1058
+Pos=1584,809
+Size=336,271
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000014,0
 
 [Window][Example: Documents]
 Pos=903,239
@@ -38,50 +38,92 @@ Collapsed=0
 
 [Window][performance]
 Pos=1584,22
-Size=336,62
+Size=336,69
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000010,0
 
 [Window][IKControle]
-Pos=1584,608
-Size=336,472
+Pos=1584,574
+Size=336,506
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][ModelRenderer]
 Pos=0,22
-Size=1582,1058
+Size=1031,1058
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000015,0
 
 [Window][Graphs]
-Pos=0,862
-Size=1484,218
+Pos=0,747
+Size=1449,290
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][motors]
-Pos=1120,22
-Size=364,838
+Pos=1094,22
+Size=355,723
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][State]
-Pos=1584,86
-Size=336,520
+Pos=1584,540
+Size=336,267
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000012,0
+
+[Window][Input]
+Pos=1041,84
+Size=408,205
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][GaitControle]
+Pos=823,297
+Size=759,783
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][GaitController]
+Pos=1033,22
+Size=549,1058
+Collapsed=0
+DockId=0x00000016,0
+
+[Window][StepInput]
+Pos=1584,80
+Size=336,210
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][IKController]
+Pos=1584,93
+Size=336,445
+Collapsed=0
+DockId=0x00000011,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1058 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1582,1394 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=2495,1105 Split=X Selected=0xAF4A00B3
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1118,769 CentralNode=1 Selected=0xAF4A00B3
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=364,769 Selected=0x6D19DD9F
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=2495,287 Selected=0x93CE11C7
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=336,1394 Split=Y Selected=0x82D79681
-    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=434,584 Split=Y Selected=0x82D79681
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=434,62 Selected=0x82D79681
-      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=434,520 Selected=0x6252FDFF
-    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=434,472 Selected=0x4F8F5D97
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1058 Split=X
+  DockNode          ID=0x00000003 Parent=0x3BC79352 SizeRef=1582,1394 Split=Y
+    DockNode        ID=0x00000001 Parent=0x00000003 SizeRef=2495,723 Split=X Selected=0xAF4A00B3
+      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1118,769 Split=X Selected=0xAF4A00B3
+        DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=917,1058 Split=X Selected=0xAF4A00B3
+          DockNode  ID=0x00000015 Parent=0x0000000B SizeRef=1031,1058 CentralNode=1 Selected=0xAF4A00B3
+          DockNode  ID=0x00000016 Parent=0x0000000B SizeRef=549,1058 Selected=0x3D8F5DF9
+        DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=663,1058 Split=Y Selected=0x19E91DD3
+          DockNode  ID=0x00000009 Parent=0x0000000D SizeRef=759,208 Selected=0x19E91DD3
+          DockNode  ID=0x0000000E Parent=0x0000000D SizeRef=759,783 Selected=0xBCA4E8DA
+      DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=364,769 Selected=0x6D19DD9F
+    DockNode        ID=0x00000002 Parent=0x00000003 SizeRef=2495,290 Selected=0x93CE11C7
+  DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=336,1394 Split=Y Selected=0x82D79681
+    DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=434,550 Split=Y Selected=0x6252FDFF
+      DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=336,268 Split=Y Selected=0x88AB723A
+        DockNode    ID=0x0000000A Parent=0x0000000F SizeRef=336,56 Split=Y Selected=0x82D79681
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=336,69 Selected=0x82D79681
+          DockNode  ID=0x00000011 Parent=0x0000000A SizeRef=336,445 Selected=0xC353D899
+        DockNode    ID=0x0000000C Parent=0x0000000F SizeRef=336,210 Selected=0x88AB723A
+      DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=336,280 Split=Y Selected=0xE927CF2F
+        DockNode    ID=0x00000012 Parent=0x00000013 SizeRef=336,267 Selected=0x6252FDFF
+        DockNode    ID=0x00000014 Parent=0x00000013 SizeRef=336,271 Selected=0xE927CF2F
+    DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=434,506 Selected=0x4F8F5D97
 
