--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -31,13 +31,16 @@ set(SRC_FILES
         ${APP_PATH}/src/modelrenderer/MeshData.cpp
         ${APP_PATH}/src/modelrenderer/MeshDataPool.cpp
         ${APP_PATH}/src/modelrenderer/SymbolBatches.cpp
-        ${APP_PATH}/src/ik/IKControle.cpp
+        ${APP_PATH}/src/ik/IKController.cpp
         ${APP_PATH}/src/ik/IKControleLeg.cpp
         ${APP_PATH}/src/ik/IKLeg.cpp
         ${APP_PATH}/src/ik/IKModel.cpp
-        ${APP_PATH}/src/states/StateControle.cpp
+        ${APP_PATH}/src/states/StateController.cpp
         ${APP_PATH}/src/states/RiseState.cpp
-        ${APP_PATH}/src/input/InputHandler.cpp
+        ${APP_PATH}/src/states/StepState.cpp
+        ${APP_PATH}/src/input/StepInput.cpp
+        ${APP_PATH}/src/walking/GaitController.cpp
+        ${APP_PATH}/src/walking/LegController.cpp
         )
 
 ci_make_app(
