--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -1,13 +1,13 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=1920,1361
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1584,809
-Size=336,271
+Pos=1237,1022
+Size=683,339
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000017,0
 
 [Window][Example: Documents]
 Pos=903,239
@@ -37,8 +37,8 @@ Size=400,400
 Collapsed=0
 
 [Window][performance]
-Pos=1584,22
-Size=336,69
+Pos=1237,22
+Size=683,88
 Collapsed=0
 DockId=0x00000010,0
 
@@ -50,13 +50,13 @@ DockId=0x00000008,0
 
 [Window][ModelRenderer]
 Pos=0,22
-Size=1031,1058
+Size=652,920
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000014,0
 
 [Window][Graphs]
-Pos=0,747
-Size=1449,290
+Pos=0,944
+Size=1235,417
 Collapsed=0
 DockId=0x00000002,0
 
@@ -67,8 +67,8 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][State]
-Pos=1584,540
-Size=336,267
+Pos=1237,678
+Size=683,342
 Collapsed=0
 DockId=0x00000012,0
 
@@ -85,8 +85,8 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][GaitController]
-Pos=1033,22
-Size=549,1058
+Pos=654,22
+Size=581,920
 Collapsed=0
 DockId=0x00000016,0
 
@@ -97,33 +97,33 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][IKController]
-Pos=1584,93
-Size=336,445
+Pos=1237,112
+Size=683,564
 Collapsed=0
 DockId=0x00000011,0
 
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1058 Split=X
-  DockNode          ID=0x00000003 Parent=0x3BC79352 SizeRef=1582,1394 Split=Y
-    DockNode        ID=0x00000001 Parent=0x00000003 SizeRef=2495,723 Split=X Selected=0xAF4A00B3
-      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1118,769 Split=X Selected=0xAF4A00B3
-        DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=917,1058 Split=X Selected=0xAF4A00B3
-          DockNode  ID=0x00000015 Parent=0x0000000B SizeRef=1031,1058 CentralNode=1 Selected=0xAF4A00B3
-          DockNode  ID=0x00000016 Parent=0x0000000B SizeRef=549,1058 Selected=0x3D8F5DF9
-        DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=663,1058 Split=Y Selected=0x19E91DD3
-          DockNode  ID=0x00000009 Parent=0x0000000D SizeRef=759,208 Selected=0x19E91DD3
-          DockNode  ID=0x0000000E Parent=0x0000000D SizeRef=759,783 Selected=0xBCA4E8DA
-      DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=364,769 Selected=0x6D19DD9F
-    DockNode        ID=0x00000002 Parent=0x00000003 SizeRef=2495,290 Selected=0x93CE11C7
-  DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=336,1394 Split=Y Selected=0x82D79681
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1339 Split=X
+  DockNode          ID=0x00000003 Parent=0x3BC79352 SizeRef=1604,1394 Split=X
+    DockNode        ID=0x00000005 Parent=0x00000003 SizeRef=1118,769 Split=X Selected=0xAF4A00B3
+      DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=917,1058 Split=Y Selected=0xAF4A00B3
+        DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=745,920 Split=X Selected=0xAF4A00B3
+          DockNode  ID=0x00000014 Parent=0x00000001 SizeRef=652,886 CentralNode=1 Selected=0xAF4A00B3
+          DockNode  ID=0x00000016 Parent=0x00000001 SizeRef=581,886 Selected=0x3D8F5DF9
+        DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=745,417 Selected=0x93CE11C7
+      DockNode      ID=0x0000000D Parent=0x00000005 SizeRef=663,1058 Split=Y Selected=0x19E91DD3
+        DockNode    ID=0x00000009 Parent=0x0000000D SizeRef=759,208 Selected=0x19E91DD3
+        DockNode    ID=0x0000000E Parent=0x0000000D SizeRef=759,783 Selected=0xBCA4E8DA
+    DockNode        ID=0x00000006 Parent=0x00000003 SizeRef=364,769 Selected=0x6D19DD9F
+  DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=887,1394 Split=Y Selected=0x82D79681
     DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=434,550 Split=Y Selected=0x6252FDFF
       DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=336,268 Split=Y Selected=0x88AB723A
         DockNode    ID=0x0000000A Parent=0x0000000F SizeRef=336,56 Split=Y Selected=0x82D79681
           DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=336,69 Selected=0x82D79681
           DockNode  ID=0x00000011 Parent=0x0000000A SizeRef=336,445 Selected=0xC353D899
         DockNode    ID=0x0000000C Parent=0x0000000F SizeRef=336,210 Selected=0x88AB723A
-      DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=336,280 Split=Y Selected=0xE927CF2F
-        DockNode    ID=0x00000012 Parent=0x00000013 SizeRef=336,267 Selected=0x6252FDFF
-        DockNode    ID=0x00000014 Parent=0x00000013 SizeRef=336,271 Selected=0xE927CF2F
+      DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=336,280 Split=Y Selected=0x6252FDFF
+        DockNode    ID=0x00000012 Parent=0x00000013 SizeRef=336,270 Selected=0x6252FDFF
+        DockNode    ID=0x00000017 Parent=0x00000013 SizeRef=336,268 Selected=0xE927CF2F
     DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=434,506 Selected=0x4F8F5D97
 
