--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -6,9 +6,13 @@ set(CMAKE_CXX_STANDARD 17)
 
 get_filename_component( CINDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../Cinder" ABSOLUTE )
 get_filename_component( APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}" ABSOLUTE )
-get_filename_component( BOT_SHARED "${CMAKE_CURRENT_SOURCE_DIR}/../shared" ABSOLUTE )
+INCLUDE_DIRECTORIES(
+        ../../bullet3/src
+)
 
-include_directories( ${BOT_SHARED})
+LINK_LIBRARIES(
+        BulletDynamics BulletCollision LinearMath
+)
 
 include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
 
@@ -48,4 +52,4 @@ ci_make_app(
         CINDER_PATH ${CINDER_PATH}
 
 )
-target_link_libraries(bot libJetsonGPIO.a)
+target_link_libraries(bot libJetsonGPIO.a )
