--- a/code/assets/settings/AppSettings.json
+++ b/code/assets/settings/AppSettings.json
@@ -8,5 +8,10 @@
       "key" : "windowSizeY",
       "type" : "int",
       "value" : 1440
+   },
+   {
+      "key" : "isSimulation",
+      "type" : "bool",
+      "value" : true
    }
 ]
